--- a/examples/build.css
+++ b/examples/build.css
@@ -1,3 +1,21 @@
+body {
+  -webkit-font-smoothing: none;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: normal;
+  font-size: 11px;
+  line-height: normal;
+  font-family: Tahoma, Verdana;
+  color: #070707;
+}
+h1,
+h2 {
+  text-transform: uppercase;
+  font-0: weight;
+  font-family: Helvetica, Arial, "Lucida Grande", sans-serif;
+  color: #ffffff;
+  text-shadow: #fec4c4 -4px -4px 10px, #a2f5ff 4px 4px 6px, #a2f5ff 4px 4px 6px, #fec4c4 -4px -4px 6px;
+}
 .vapor-grid {
   display: -webkit-flex;
   -webkit-flex-flow: row wrap;
@@ -71,4 +89,80 @@
 }
 .vapor-1 {
   width: 100%;
+}
+button:enabled {
+  color: #070707;
+}
+button,
+::-webkit-file-upload-button {
+  -webkit-font-smoothing: none;
+  text-align: center;
+  outline: none;
+  padding: 4px;
+  background: #bfbfbf;
+  border: 1px solid;
+  border-top-color: #dfdfdf;
+  border-left-color: #dfdfdf;
+  border-right-color: #808080;
+  border-bottom-color: #808080;
+  box-shadow: 1px 1px 0 0 #000000;
+}
+button:disabled {
+  color: #818181;
+  text-shadow: 1px 1px #ffffff;
+}
+button:active:enabled {
+  box-shadow: 0 0 0 0 #000000 inset;
+  border-top-color: #000000;
+  border-left-color: #000000;
+  border-right-color: #000000;
+  border-bottom-color: #000000;
+  /* TODO: restyle this to be accurate */
+}
+.window {
+  width: 400px;
+  background: #bfbfbf;
+  border: 1px solid;
+  border-top-color: #dfdfdf;
+  border-left-color: #dfdfdf;
+  border-right-color: #808080;
+  border-bottom-color: #808080;
+  box-shadow: 1px 1px 0 0 #000;
+}
+.resizable.window {
+  overflow: auto;
+  resize: both;
+  /* TODO: style resize controls */
+}
+.window > .content {
+  padding: 7px 10px;
+}
+.window > .header {
+  -webkit-font-smoothing: none;
+  margin: 2px 2px 0;
+  padding: 1px 2px;
+  color: #fff;
+  background: linear-gradient(to right, #000080, #1084d0);
+  font-weight: bold;
+  font-size: 11px;
+  line-height: 16px;
+}
+.window > .header > .icon {
+  width: 16px;
+  height: 16px;
+  float: left;
+  margin-right: 2px;
+}
+.window > .header > .buttons {
+  height: 14px;
+  float: right;
+}
+.window > .header > .buttons > button {
+  vertical-align: text-top;
+  font-weight: bold;
+  line-height: 12px;
+  padding: 0;
+  height: 14px;
+  width: 14px;
+  /* TODO: fix centering */
 }
