--- a/less/font.less
+++ b/less/font.less
@@ -21,3 +21,36 @@ h1,h2 {
         @blue-lighter 4px 4px 6px,
         @red-lighter -4px -4px 6px;
 }
+
+
+h3.section, h4.section, h5.section {
+    border-bottom: 4px solid @green;
+    margin-top: 32px;
+
+    &::after {
+        content: "";
+        width: 100%;
+        height: 4px;
+        display: block;
+        position: relative;
+        top:7px;
+        z-index: -1;
+        left:2px;
+        background: @pink;
+    };
+
+    &::before {
+        content: " ";
+        background-image: url(/img/ic-section-small.png);
+        background-repeat: none; 
+        position: relative;
+        display: block;
+        float: right;
+        top:-8px;
+        height:30px;
+        width:30px;
+        z-index: 10;
+    };
+
+}
+
