--- a/src/index.styl
+++ b/src/index.styl
@@ -2,13 +2,4 @@
 @import './variables'
 @import './mixins'
 
-.win98
-  shittyfont()
-
-  @require './window'
-  @require './buttons'
-
-  .resizable
-    // TODO: style resize controls
-    overflow: auto
-    resize: both
+@require './palm-trees'
