--- a/src/index.styl
+++ b/src/index.styl
@@ -2,9 +2,10 @@
 @import './variables'
 @import './mixins'
 
-.win98
+.vaporwave
   shittyfont()
 
+  @require './font'
   @require './window'
   @require './buttons'
 
