--- a/src/font.styl
+++ b/src/font.styl
@@ -3,7 +3,7 @@ h1, h2
   text-transform: uppercase
   font-0: weight
   font-family: Helvetica, Arial, "Lucida Grande", sans-serif
-  color:@white
+  color: @white
   text-shadow: 
     @red-lighter -4px -4px 10px,
     @blue-lighter 4px 4px 6px,
@@ -16,30 +16,30 @@ h1, h2
   border-bottom: 4px solid green
   margin-top: 32px
   margin: 16px 8px
-  z-index:2
-  display:block
+  z-index: 2
+  display: block
 
 .section::after 
-  content: ""
+  content: ''
   width: 100%
   height: 4px
   display: block
   position: relative
-  top:7px
+  top: 7px
   z-index: 1
-  left:2px
+  left: 2px
   background: pink
   
 
 .section::before 
-  content: " "
-  background-image: url(/img/ic-section-small.png)
+  content: ' '
+  background-image: url('img/ic-section-small.png')
   background-repeat: none 
   position: relative
   display: block
   float: right
-  top:-8px
-  height:30px
-  width:30px
+  top: -8px
+  height: 30px
+  width: 30px
   
 
