relative palm trees

--- a/src/palm-trees.styl
+++ b/src/palm-trees.styl
@@ -11,6 +11,9 @@ palm-tree()
   width: width
   transform-origin: bottom center
 
+.palm-trees
+  position: relative
+
 .palm-trees:before
   palm-tree()
 
