--- a/src/index.styl
+++ b/src/index.styl
@@ -6,6 +6,6 @@
 @require './water'
 
 .container
-  max-width: 768px;
+  max-width: 768px
   margin-left: calc(50% - 768px/2)
   margin-right: calc(50% - 768px/2)
