--- a/src/index.styl
+++ b/src/index.styl
@@ -3,7 +3,9 @@
 @import './mixins'
 @require './font'
 @require './palm-trees'
+@require './columns'
 @require './water'
+@require './divider'
 
 .container
   max-width: 768px
