fix column rotation

--- a/src/columns.styl
+++ b/src/columns.styl
@@ -21,7 +21,7 @@ column()
   position: absolute
   top: 50%
   left: 0
-  transform: translateY(-50%)
+  transform: translateY(-50%) translateX(-50%) rotateY(180deg)
 
 .columns:after
   column()
