--- a/src/font.styl
+++ b/src/font.styl
@@ -1,7 +1,7 @@
 @import 'nib'
 @font-face 
   font-family: "PfDin"
-  src: url(/font/pf-din.ttf)
+  src: url('font/pf-din.ttf')
 
 
 h1.section, h2.section, h3.section, h4.section, h5.section, h6.section 
