--- a/src/font.styl
+++ b/src/font.styl
@@ -7,7 +7,7 @@
 
 h1.section, h2.section, h3.section, h4.section, h5.section, h6.section 
   font-family: PfDin
-  font-weight: 0;
+  font-weight: 0
 
 
 //experiment..
@@ -26,9 +26,9 @@ h1.section, h2.section, h3.section, h4.section, h5.section, h6.section
   margin: 16px 8px
   text-shadow: gray-light 2px 2px 2px
   z-index:2
-  color:gray-darker
+  color: gray-darker
   letter-spacing: 6px
-  display:block
+  display: block
 
 //wtf is the pink showing in front of the green
 .section::after 
