--- a/src/font.styl
+++ b/src/font.styl
@@ -31,7 +31,7 @@ h1.section, h2.section, h3.section, h4.section, h5.section, h6.section
   display: block
 
 //wtf is the pink showing in front of the green
-.section::after 
+.section:after 
   content: ''
   width: 100%
   height: 4px
@@ -43,7 +43,7 @@ h1.section, h2.section, h3.section, h4.section, h5.section, h6.section
   background: pink
   
 
-.section::before 
+.section:before 
   content: ' '
   background-image: url('img/ic-section-small.png')
   background-repeat: none 
