--- a/src/index.styl
+++ b/src/index.styl
@@ -8,7 +8,11 @@
 @require './white-marble'
 @require './divider'
 @require './dolphin'
+@require './statue'
 @require './bevels'
+@require './neon-squares'
+@require './neon-human'
+@require './lists'
 
 .container
   max-width: 768px
